--- a/.github/workflows/syncLeia.yml
+++ b/.github/workflows/syncLeia.yml
@@ -15,6 +15,7 @@ jobs:
           fetch-depth: 0
       - run: git config user.name github-actions
       - run: git config user.email github-actions@github.com
+      - run: git config pull.ff only
       - run: git pull origin master
       - run: sed -i 's/import addon="xbmc.python" version="3.0.0"/import addon="xbmc.python" version="2.19.0"/' addon.xml
       - run: git add -A
