--- a/.github/workflows/syncUni.yml
+++ b/.github/workflows/syncUni.yml
@@ -16,7 +16,7 @@ jobs:
       - run: git config user.name github-actions
       - run: git config user.email github-actions@github.com
       - run: git pull origin master --verbose --no-ff
-      - run: sed -i 's/import addon="xbmc.python" version="3.0.0" \//!--import addon="xbmc.python" version="3.0.0" \/--/' addon.xml
+      - run: sed -i '/import addon="xbmc.python" version="3.0.0" \//d' addon.xml
       - run: git add -A
       - run: git diff-index --quiet HEAD || git commit -m "addon.xml auto update for Uni"
       - run: git push --force
